--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
-  "name": "itinerary_details",
+  "name": "pdf-service",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server.js"
   },
-  "author": "Harshit Sharma",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^1.7.9",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mssql": "^11.0.1"
+    "express": "^4.18.2",
+    "puppeteer": "^21.6.1",
+    "node-cron": "^3.0.3"
   }
 }
