--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.6.1",
+    "puppeteer-core": "^21.6.1",
+    "@sparticuz/chromium": "^119.0.2",
     "node-cron": "^3.0.3"
   }
 }
